feat: добавляет основной layout

--- a/resources/styles/site/app.scss
+++ b/resources/styles/site/app.scss
@@ -1,4 +1,4 @@
-@import "base/normalize";
-@import "base/base";
-@import "base/fonts";
-@import "abstracts/varibless";
+@import "abstracts";
+@import "base";
+@import "layout";
+@import 'components';
